--- a/Editor/Resources/FlowTween/TweenSettings.uxml
+++ b/Editor/Resources/FlowTween/TweenSettings.uxml
@@ -4,7 +4,7 @@
         <ui:FloatField label="Duration (s)" value="42,2" binding-path="_duration" name="duration" class="unity-base-field__aligned" />
         <ui:EnumField label="Type" type="FlowTween.TweenSettings+EasingType, Kesomannen.FlowTween" binding-path="_easeType" name="ease-type" class="unity-base-field__aligned" />
         <uie:CurveField label="Custom Ease" binding-path="_customEase" name="custom-ease" class="unity-base-field__aligned" />
-        <ui:EnumField label="Preset Ease" type="FlowTween.PresetEaseType, Kesomannen.FlowTween" binding-path="_presetEase" name="preset-ease" class="unity-base-field__aligned" />
+        <ui:EnumField label="Preset Ease" type="FlowTween.EaseType, Kesomannen.FlowTween" binding-path="_presetEase" name="preset-ease" class="unity-base-field__aligned" />
         <ui:EnumField label="Loop Mode" type="FlowTween.LoopMode, Kesomannen.FlowTween" binding-path="_loopMode" name="loop-mode" class="unity-base-field__aligned" />
         <ui:VisualElement style="flex-grow: 1; margin-top: 12px; flex-direction: row; align-items: center;">
             <ui:ProgressBar value="0" title="Preview" name="preview" high-value="1" low-value="0" style="flex-grow: 1; padding-bottom: 0;" />
