--- a/Editor/Resources/FlowTween/FromToTweenerTargetData.uxml
+++ b/Editor/Resources/FlowTween/FromToTweenerTargetData.uxml
@@ -1,13 +1,25 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
-    <Style src="project://database/Assets/Plugins/FlowTween/Editor/Resources/FlowTween/FlowTweenStyle.uss?fileID=7433441132597879392&amp;guid=1652f00bc0ccdfa47868f7330aac3e70&amp;type=3#FlowTweenStyle" />
-    <ui:VisualElement style="flex-direction: row;">
-        <uie:PropertyField binding-path="_start" style="flex-grow: 1;" />
-        <ui:Label tabindex="-1" text="Relative?" parse-escape-sequences="true" display-tooltip-when-elided="true" class="relative-label" />
-        <ui:Toggle binding-path="_startRelative" />
+    <Style src="project://database/Packages/com.kesomannen.flowtween/Editor/Resources/FlowTween/FlowTweenStyle.uss?fileID=7433441132597879392&amp;guid=1652f00bc0ccdfa47868f7330aac3e70&amp;type=3#FlowTweenStyle" />
+    <ui:VisualElement name="start">
+        <ui:VisualElement style="flex-direction: row;">
+            <uie:PropertyField binding-path="_start.Value" label="Start" style="flex-grow: 1;" />
+            <ui:Label tabindex="-1" text="Relative?" parse-escape-sequences="true" display-tooltip-when-elided="true" class="relative-label" />
+            <ui:Toggle binding-path="_start.Relative" name="relative-toggle" />
+        </ui:VisualElement>
+        <ui:Foldout text="Advanced" value="false">
+            <ui:DropdownField label="Operation" index="-1" choices="System.Collections.Generic.List`1[System.String]" name="operation-dropdown" binding-path="_start.OperationName" class="unity-base-field__aligned" />
+            <uie:ObjectField label="Source" name="source-field" binding-path="_start.Source" class="unity-base-field__aligned" />
+        </ui:Foldout>
     </ui:VisualElement>
-    <ui:VisualElement style="flex-grow: 0; flex-direction: row;">
-        <uie:PropertyField binding-path="_end" style="flex-grow: 1;" />
-        <ui:Label tabindex="-1" text="Relative?" parse-escape-sequences="true" display-tooltip-when-elided="true" class="relative-label" />
-        <ui:Toggle binding-path="_endRelative" />
+    <ui:VisualElement name="end">
+        <ui:VisualElement style="flex-direction: row;">
+            <uie:PropertyField binding-path="_end.Value" label="End" style="flex-grow: 1;" />
+            <ui:Label tabindex="-1" text="Relative?" parse-escape-sequences="true" display-tooltip-when-elided="true" class="relative-label" />
+            <ui:Toggle binding-path="_end.Relative" name="relative-toggle" />
+        </ui:VisualElement>
+        <ui:Foldout text="Advanced" value="false" name="Foldout">
+            <ui:DropdownField label="Operation" index="-1" choices="System.Collections.Generic.List`1[System.String]" name="operation-dropdown" binding-path="_end.OperationName" class="unity-base-field__aligned" />
+            <uie:ObjectField label="Source" name="source-field" binding-path="_end.Source" class="unity-base-field__aligned" />
+        </ui:Foldout>
     </ui:VisualElement>
 </ui:UXML>
