--- a/Editor/Resources/FlowTween/FlowTweenStyle.uss
+++ b/Editor/Resources/FlowTween/FlowTweenStyle.uss
@@ -5,7 +5,7 @@
 .flow-material-icon {
     font-size: 14px;
     -unity-font-style: normal;
-    -unity-font-definition: url('MaterialIcons-Regular SDF.asset'); 
+    -unity-font-definition: url('project://database/Packages/com.kesomannen.flowtween/Editor/Resources/FlowTween/MaterialIcons-Regular%20SDF.asset?fileID=11400000&guid=69b4263c44c3af64cae0bb419f51ec07&type=2#MaterialIcons-Regular SDF');
 }
 
 .icon-button {
@@ -41,4 +41,8 @@
 
 .unity-list-view__item:hover {
     background-color: rgba(0, 0, 0, 0.05);
+}
+
+Foldout > #unity-content {
+    margin-bottom: 8px;
 }
