--- a/Editor/Resources/FlowTween/FromToTweenerTargetData.uxml
+++ b/Editor/Resources/FlowTween/FromToTweenerTargetData.uxml
@@ -5,21 +5,27 @@
             <uie:PropertyField binding-path="_start.Value" label="Start" style="flex-grow: 1;" />
             <ui:Label tabindex="-1" text="Relative?" parse-escape-sequences="true" display-tooltip-when-elided="true" class="relative-label" />
             <ui:Toggle binding-path="_start.Relative" name="relative-toggle" />
+            <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="advanced-button">
+                <FlowTween.Editor.MaterialIcon tabindex="-1" icon="settings" />
+            </ui:Button>
         </ui:VisualElement>
-        <ui:Foldout text="Advanced" value="false">
+        <ui:VisualElement name="advanced" style="flex-grow: 1;">
             <ui:DropdownField label="Operation" index="-1" choices="System.Collections.Generic.List`1[System.String]" name="operation-dropdown" binding-path="_start.OperationName" class="unity-base-field__aligned" />
             <uie:ObjectField label="Source" name="source-field" binding-path="_start.Source" class="unity-base-field__aligned" />
-        </ui:Foldout>
+        </ui:VisualElement>
     </ui:VisualElement>
     <ui:VisualElement name="end">
         <ui:VisualElement style="flex-direction: row;">
             <uie:PropertyField binding-path="_end.Value" label="End" style="flex-grow: 1;" />
             <ui:Label tabindex="-1" text="Relative?" parse-escape-sequences="true" display-tooltip-when-elided="true" class="relative-label" />
             <ui:Toggle binding-path="_end.Relative" name="relative-toggle" />
+            <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="advanced-button">
+                <FlowTween.Editor.MaterialIcon tabindex="-1" icon="settings" name="MaterialIcon" />
+            </ui:Button>
         </ui:VisualElement>
-        <ui:Foldout text="Advanced" value="false" name="Foldout">
+        <ui:VisualElement name="advanced" style="flex-grow: 1;">
             <ui:DropdownField label="Operation" index="-1" choices="System.Collections.Generic.List`1[System.String]" name="operation-dropdown" binding-path="_end.OperationName" class="unity-base-field__aligned" />
             <uie:ObjectField label="Source" name="source-field" binding-path="_end.Source" class="unity-base-field__aligned" />
-        </ui:Foldout>
+        </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
