--- a/Editor/Resources/FlowTween/FlowTweenStyle.uss
+++ b/Editor/Resources/FlowTween/FlowTweenStyle.uss
@@ -56,13 +56,13 @@ Foldout > #unity-content {
     margin-bottom: 6px;
 }
 
-#advanced-button {
+.icon-button-option {
     margin-left: 8px;
     padding-top: 1px;
     padding-bottom: 1px;
     padding-right: 4px;
     padding-left: 6px;
-    margin-right: 0;
+    margin-right: -2px;
 }
 
 .embedded-field > Label {
