--- a/Editor/Resources/FlowTween/TweenSettings.uxml
+++ b/Editor/Resources/FlowTween/TweenSettings.uxml
@@ -3,7 +3,7 @@
     <ui:Foldout text="Foldout">
         <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
             <ui:FloatField label="Duration (s)" value="42,2" binding-path="_duration" name="duration" class="unity-base-field__aligned" style="flex-grow: 1;" />
-            <ui:FloatField label="Delay (s)" value="42,2" name="delay" binding-path="_delay" class="embedded-field" style="flex-shrink: 1;" />
+            <ui:FloatField label="Delay (s)" value="42,2" name="delay" binding-path="_delay" class="embedded-field" />
         </ui:VisualElement>
         <ui:EnumField label="Type" type="FlowTween.TweenSettings+EasingType, Kesomannen.FlowTween" binding-path="_easeType" name="ease-type" class="unity-base-field__aligned" />
         <uie:CurveField label="Ease Curve" binding-path="_customEase" name="custom-ease" class="unity-base-field__aligned" />
@@ -13,10 +13,12 @@
         </ui:VisualElement>
         <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
             <ui:EnumField label="Loop Mode" type="FlowTween.LoopMode, Kesomannen.FlowTween" binding-path="_loopMode" name="loop-mode" class="unity-base-field__aligned" style="flex-grow: 1;" />
-            <ui:IntegerField value="-1" name="loop-count" binding-path="_loopCount" class="embedded-field" />
-            <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="loop-infinite-button" class="icon-button-option" style="margin-left: 3px;">
-                <FlowTween.Editor.MaterialIcon tabindex="-1" icon="all_inclusive" />
-            </ui:Button>
+            <ui:VisualElement class="embedded-field">
+                <ui:IntegerField value="-1" name="loop-count" binding-path="_loopCount" style="flex-grow: 1;" />
+                <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="loop-infinite-button" class="icon-button-option" style="margin-left: 3px;" tooltip="Sets the tween to loop infinitely.">
+                    <FlowTween.Editor.MaterialIcon tabindex="-1" icon="all_inclusive" />
+                </ui:Button>
+            </ui:VisualElement>
         </ui:VisualElement>
         <ui:VisualElement style="flex-grow: 1; margin-top: 12px; flex-direction: row; align-items: center;">
             <ui:ProgressBar value="0" title="Preview" name="preview" high-value="1" low-value="0" style="flex-grow: 1; padding-bottom: 0;" />
