--- a/Editor/Resources/FlowTween/TweeenManagerControlPanelTween.uxml
+++ b/Editor/Resources/FlowTween/TweeenManagerControlPanelTween.uxml
@@ -1,6 +1,6 @@
-<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements">
-    <Style src="FlowTween.uss" />
-    <Style src="TweenManagerControlPanel.uss" />
+<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="True">
+    <Style src="project://database/Packages/com.kesomannen.flowtween/Editor/Resources/FlowTween/FlowTween.uss?fileID=7433441132597879392&amp;guid=1652f00bc0ccdfa47868f7330aac3e70&amp;type=3#FlowTween" />
+    <Style src="project://database/Packages/com.kesomannen.flowtween/Editor/Resources/FlowTween/TweenManagerControlPanel.uss?fileID=7433441132597879392&amp;guid=2ee9065be3b71d04495001d3fff4a809&amp;type=3#TweenManagerControlPanel" />
     <ui:VisualElement class="table-layout tween">
         <ui:Label tabindex="-1" text="Name" parse-escape-sequences="true" display-tooltip-when-elided="true" name="tween-name" class="table-name" />
         <ui:VisualElement class="divider" />
@@ -9,16 +9,7 @@
         </ui:VisualElement>
         <ui:VisualElement class="divider" />
         <ui:VisualElement name="tween-progress" class="table-progress" style="flex-grow: 1;">
-            <ui:ProgressBar value="22" title="1 / 2s (50%)" />
-        </ui:VisualElement>
-        <ui:VisualElement class="divider" />
-        <ui:VisualElement name="tween-controls" class="table-controls" style="flex-direction: row;">
-            <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="pause" class="icon-button">
-                <FlowTween.Editor.MaterialIcon tabindex="-1" icon="pause" />
-            </ui:Button>
-            <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="cancel" class="icon-button">
-                <FlowTween.Editor.MaterialIcon tabindex="-1" icon="cancel" />
-            </ui:Button>
+            <ui:ProgressBar value="22" title="1 / 2s (50%)" high-value="1" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
